--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "ytmusic-electron",
   "version": "1.0.0",
-  "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "license": "MIT",
   "devDependencies": {
-    "electron": "^17.1.2"
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "svelte": "^3.44.0",
+    "vite": "^2.8.0"
   }
 }
