--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "electron": "^17.1.2",
     "svelte": "^3.44.0",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "electron-store": "^8.0.1",
+    "svelte-routing": "^1.6.0"
   }
 }
