--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   },
   "dependencies": {
     "electron-store": "^8.0.1",
-    "svelte-routing": "^1.6.0"
+    "svelte-spa-router": "^3.2.0"
   }
 }
