--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "electron-store": "^8.0.1",
-    "svelte-spa-router": "^3.2.0"
+    "howler": "^2.2.3",
+    "svelte-spa-router": "^3.2.0",
+    "ytdl-core": "^4.11.0"
   }
 }
